Periodic flush, to enable me to retrace

--- a/meritrrac/index.html
+++ b/meritrrac/index.html
@@ -101,57 +101,10 @@ All Open Groups</a>
 </div>
 <div class="div_body_mid_column">
 <div class="mid_main">
-<div class="page_header">New Search</div>
-<div class="search_box_big_main">
-<form name="searchform" action="./Groofer_files/Groofer.html" method="GET">
-<div class="search_box_placeholder">
-<div class="float_left_main_search"><input type="text" class="search_textbox" name="keyword" value="">
+<div align=center>
+This is where we put center stuff
 </div>
-<div class="float_right"><a href="http://127.0.0.1/search#" onclick="javascript:document.searchform.submit();"><img src="./Groofer_files/search_arrow_big.gif" alt="Search" border="0"></a></div>
 </div>
-
-<div class="block_main02a">
-<div class="float_left06">
-&nbsp;
-</div>
-<div class="float_left"> <span class="text1"> Please select the Search Engine you wish to use : </span> </div>
-<div class="float_left">
- &nbsp; &nbsp;
-<select id="searchtype" name="searchtype">
-<option disabled="disabled">Public Search Engines</option>
-<option value="1" &nbsp;="" selected="">&nbsp; Google</option>
-<option value="2" &nbsp;="">&nbsp; Bing</option>
-
-<option disabled="disabled">Search in Groofer</option>
-<option value="3">&nbsp; My Feeds</option>
-<option value="6">&nbsp; My Streams</option>
-
-<option disabled="disabled">Groofer Search Bundles</option>
-<option value="4">&nbsp; Q&amp;A Sites</option>
-<option value="5">&nbsp; Analyst Sites</option>
-</select>
-
-</div>
-
-</div>
-
-
-</form>
-</div>
-
-
-<div>
-<div id="results">
-<code>
-
-</code></div><code>
-<div class="div_top_link02">
-<input type="hidden" id="key" value="0">
-<div class="float_right"><a href="http://127.0.0.1/search#">TOP</a></div>
-<div class="clear"></div>
-</div>
-</code></div><code>
-</code></div><code>
 
 
 <div id="commtext" style="display:none">
@@ -245,7 +198,7 @@ To save to an existing folder select the folder name from the list</div>
 var record = 0;
 
 </script>
-</code></div><code>
+</div>
 <div class="div_body_right_column">
 <div class="right_column_placeholder" align="center" style="height:110px">
 <br>
@@ -263,12 +216,12 @@ drag the link below to your browser bookmarks.
 
 </div>
 <div class="clear"></div>
-</code></div><code>
-</code></div><code>
-</code></div><code>
+</div>
+</div>
+</div>
 <div class="footer" align="center">
 <div class="div_footer" align="left">© 2010-12 MarketPlane Online Inc. <a href="http://www.groofer.com/privacy" target="_a">Privacy</a>&nbsp;|&nbsp;<a href="http://www.groofer.com/terms-of-service" target="_a">Terms of Service</a></div>
 </div>
 
 
-</code></body></html>
+</body></html>
