--- a/meritrrac/index.html
+++ b/meritrrac/index.html
@@ -192,29 +192,18 @@ To save to an existing folder select the folder name from the list</div>
 </div>
 
 
-
-
-<script type="text/javascript">
-var record = 0;
-
-</script>
 </div>
-<div class="div_body_right_column">
-<div class="right_column_placeholder" align="center" style="height:110px">
-<br>
-<span class="high1">
-To add the bookmarklet to your browser, 
-drag the link below to your browser bookmarks.
-</span>
-<br>
-<br>
 
-<span class="high"><a href="javascript:(function(){var head= document.getElementsByTagName('head')[0]; var script= document.createElement('script'); script.type= 'text/javascript'; script.src= 'http://127.0.0.1/bletjs'; head.appendChild(script);})()">Share on Groofer</a> </span>
+<div class="div_body_right_column" style='display:none'>
+<!-- This is the box, probably not needed -->
+<div class="right_column_placeholder" align="center" style="height:110px:display:none">
+
 
 </div>
 
 
 </div>
+
 <div class="clear"></div>
 </div>
 </div>
