--- a/meritrrac/index.html
+++ b/meritrrac/index.html
@@ -27,49 +27,34 @@
 
 <div class="div_body_main">
 <div class="div_body_left_column">
-<div class="profile_block">
-<div class="profile_welcome_block">Configure page</div>
-<div>
-<div class="profile_img_block"></div>
-<div class="profile_text_block">
-<a href="http://127.0.0.1/user/editProfile">Edit Profile</a> <img src="./Groofer_files/arrow01.gif"><br>
-<a href="http://127.0.0.1/logout">Logout</a></div>
-<div class="clear"></div>
-</div>
-</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="left_blocks">
-<div class="left_blocks_header01">Home</div>
+<div class="left_blocks_header01">Configure </div>
+
 <div class="left_blocks_links">
 <a href="./Groofer_files/Groofer.html" rel="tooltip" title="New Search">
-<strong>New Search</strong>&nbsp;<img src="./Groofer_files/arrow02.gif" class="arrow_link_open"></a><br>
-<a href="http://127.0.0.1/allactivity" rel="tooltip" title="My Streams">
-
-My Streams</a><br>
-<a href="http://127.0.0.1/home/feeds" rel="tooltip" title="My Feeds">
-My Feeds</a><br>
-<a href="http://127.0.0.1/home/folders" rel="tooltip" title="My Folders">
-My Folders</a><br>
-<a href="http://127.0.0.1/user/bookmarks" rel="tooltip" title="My Bookmarks">
-My Bookmarks</a> 
+<strong>New Search</strong>&nbsp;<img src="./Groofer_files/arrow02.gif" class="arrow_link_open"></a>
 </div>
 </div>
 <div class="left_blocks">
-<div class="left_blocks_header02">My Groups</div>
-<div align="right" class="more_block" style="padding-top:3px;">
-<a href="http://127.0.0.1/groups/createGroup">
-Add New</a></div>
+
 <div class="left_blocks_links">
 
-<a href="http://127.0.0.1/group/first/5" rel="tooltip" title="first">first</a>
- <br> <a href="http://127.0.0.1/group/group3/7" rel="tooltip" title="group3">group3</a>
- <br> <a href="http://127.0.0.1/group/My%20Company/191" rel="tooltip" title="My Company">My Company</a>
- <br> <a href="http://127.0.0.1/group/rankster/96" rel="tooltip" title="rankster">rankster</a>
- <br> <a href="http://127.0.0.1/group/Real/6" rel="tooltip" title="Real">Real</a>
-
+<a href="http://127.0.0.1/group/Real/6" rel="tooltip" title="Real">Add Field</a>
 
 </div>
-<div align="right" class="more_block"><a href="http://127.0.0.1/allGroups">
-See All</a></div>
 
 </div>
 <div class="left_blocks">
