One more microstep

--- a/meritrrac/index.html
+++ b/meritrrac/index.html
@@ -59,15 +59,11 @@
 </div>
 <div class="left_blocks">
 
-<div class="left_blocks_header02">My Account</div>
 
 
 <div class="left_blocks_links">
 <a href="http://127.0.0.1/user" rel="tooltip" title="Profile">
-View Profile</a><br>
-<a href="http://127.0.0.1/user/preferences" rel="tooltip" title="My Preferences">
-My Preferences</a><br>
-
+View Profile</a>
 
 </div>
 </div>
