Committed 1st stuff for merittrac

--- a/meritrrac/index.html
+++ b/meritrrac/index.html
@@ -42,7 +42,9 @@
 
 <div class="left_blocks">
 <div class="left_blocks_header01">Configure </div>
+<div class="left_blocks">
 
+</div>
 <div class="left_blocks_links">
 <a href="./Groofer_files/Groofer.html" rel="tooltip" title="New Search">
 <strong>New Search</strong>&nbsp;<img src="./Groofer_files/arrow02.gif" class="arrow_link_open"></a>
@@ -69,10 +71,9 @@ View Profile</a>
 </div>
 
 <div class="left_blocks">
-<div class="left_blocks_header02">All Network</div>
+
 <div class="left_blocks_links">
-<a href="http://127.0.0.1/user/members">
-Member List (83)</a><br>
+
 <a href="http://127.0.0.1/user/openGroups">
 All Open Groups</a>
 
