Committed some basic ui

--- a/index.html
+++ b/index.html
@@ -118,18 +118,17 @@ Add or modify a dropdown
 
 <div class="clear"></div>
 
-
-<div class='float_left03'> Add  a value</div>
-<div class='float_left03'>
-<input type="text" id="ft_optval"  onclick="return addDdValue();"/>
-</div>
 <div>
-<div class="clear"></div>
-<div class="clear"></div>
-<div> Possible lis of values </div>
-<div id="childvals" >
+<div class='float_left03'> Add  a value</div>
+<div class='float_left03'> <input type="text" id="ft_optval"  onblur="return addDdValue();"/> </div>
 </div>
 
+<div class="clear"></div>
+<div class="clear"></div>
+<div>
+<div> Possible list of values </div>
+<div id="dropdown_indi" >
+</div>
 </div>
 
 
