Commiting index file

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Add or modify a text field
 <div id='textfield_defn' class='section02'>  
 
 <div>
-<div class='float_left' > Name </div> <div class='float_left04' ><input type=text name='tf_name' >  </div>
+<div class='float_left' > Name </div> <div class='float_left04' ><input type=text id='tf_text_name' >  </div>
 </div>
 <div class="clear"></div>
 <div class="clear"></div>
@@ -113,7 +113,7 @@ Add or modify a dropdown
 
 <div>
 <div class='float_left' > Name </div> 
-<div class='float_left04' ><input type=text name='tf_name' >  </div>
+<div class='float_left04' ><input type=text id='tf_dd_name' >  </div>
 </div>
 
 <div class="clear"></div>
