Added 2 types of fields, now to add the rest

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ Add or modify a dropdown
 <div>
 <div class='float_left03'> &nbsp; </div>
 <div class='float_left03'>
-<input type="submit" value="Submit" class="button_css01" id="1"  onclick="return addfieldSubmit();"/>
+<input type="submit" value="Submit" class="button_css01" id="1"  onclick="return addDdFieldSubmit();"/>
 </div>
 </div>
 </div>
