--- a/index.html
+++ b/index.html
@@ -81,6 +81,26 @@ All Open Groups</a>
 <div class="clear"></div>
 <div class="clear"></div>
 <!-- Begin a list of huge set of divs for action in the center -->
+
+<div class="tf_center" id='tf_field_list' style='display:none' >
+These are the current list of fields
+<hr>
+<div id='id_field_list0' class='section02'>  
+<div> Here are the list of fields that are going to be displayed </div>
+<div id='id_field_list' class='section02'>  
+<div class='table_list' id='id_table_list'  >
+<div class='table_row'> 
+<div class='table_col'> Field Name  </div>
+<div class='table_col'> Field Type   </div>
+</div>
+</div>
+</div>
+
+</div>
+<div class="clear"></div>
+<div class="clear"></div>
+
+</div>
 <div class="tf_center tf_field" id='tf_textfield_defn' style='display:none' >
 Add or modify a text field
 <hr>
@@ -101,8 +121,6 @@ Add or modify a text field
 </div>
 <div class="clear"></div>
 <div class="clear"></div>
-
-
 
 </div>
 
