Display done, now lets finish the final parts - the pages

--- a/index.html
+++ b/index.html
@@ -88,15 +88,12 @@ These are the current list of fields
 <div id='id_field_list0' class='section02'>  
 <div> Here are the list of fields that are going to be displayed </div>
 
-<div class='divTable' id='id_table_list' >
-
-<div class='table_row'> 
-<div class='table_col'> Field Name  </div>
-<div class='table_col'> Field Type   </div>
-</div>
-
-
-</div>
+<table class='divTable' id='id_table_list' >
+<tr class='tr1'>
+<th class='th1'> Field Name  </th>
+<th class='th1'> Field Type   </th>
+</tr>
+</table>
 
 </div>
 <div class="clear"></div>
