Fixed crunchit and index.html

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ These are the current list of fields
 
 </div>
 
-<div class="tf_center tf_field" id='tf_page_defn' style='display:none' >
+<div class="tf_center" id='tf_addpage' style='display:none' >
 Please specify the name of the page
 <hr>
 <div id='page_defn' class='section02'>  
@@ -118,6 +118,8 @@ Please specify the name of the page
 <div class="clear"></div>
 
 </div>
+
+
 
 <div class="tf_center tf_field" id='tf_textfield_defn' style='display:none' >
 Add or modify a text field
@@ -293,7 +295,7 @@ TODO  copy the post function from the other machine. Also there should be a way 
 </div>
 </div>
 <div class="footer" align="center">
-<div class="div_footer" align="left">© 2010-12 MarketPlane Online Inc. <a href="http://www.groofer.com/privacy" target="_a">Privacy</a>&nbsp;|&nbsp;<a href="http://www.groofer.com/terms-of-service" target="_a">Terms of Service</a></div>
+<div class="div_footer" align="left">© 2012-2013 Crunchtime Software Services LLP. </div>
 </div>
 
 
