Adding page and refreshing done

--- a/index.html
+++ b/index.html
@@ -60,13 +60,11 @@ onclick='addfield()' >Add Field</a>
 </div>
 
 <div class="left_blocks">
-
-<div class="left_blocks_links">
-
-<a href="http://127.0.0.1/user/openGroups">
-All Open Groups</a>
-
+<div class="left_blocks_links" id='lf_pages' ><a href="javascript:void(0)" onclick=refreshPages() rel="tooltip" title="List of Pages"> List Of Pages </a>
+<div id='lf_pageList'>
 </div>
+</div>
+
 </div>
 
 </div>
