Dummy text added to index.html

--- a/index.html
+++ b/index.html
@@ -94,6 +94,21 @@ These are the current list of fields
 
 </div>
 
+<div class='field2page' id='field2page' style='display:none'>
+
+<div class=tc> 
+Add a field : <input type=button name=b_addfield value='Add Field' onclick='showFieldList()' class='b_addbutt'/>
+</div>
+<div class=tc> 
+Add a paragraph/text  : <input type=button name=b_addpara value='Add Paragraph' onclick='showAddParagraph()' class='b_addbutt' />
+</div>
+<div class=tc> 
+Show user-data : <input type=button name=b_adddata value='User Input' onclick='showAddDisplay()' class='b_addbutt' />
+</div>
+
+
+</div>
+
 <div class="tf_center" id='tf_addpage' style='display:none' >
 Please specify the name of the page
 <hr>
