Fixed the page addition wallah

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Add an item to the page.
 
 <tr class='tr1'>
 <td class='td1'> 
-<input type=button name=b_addfield value='Add Paragraph' onclick='showFieldList()' class='b_addbutt'/>
+<input type=button name=b_addpara value='Add Paragraph' onclick='showFieldList()' class='b_addbutt'/>
 </td>
 <td class='td2'>
 </td>
@@ -99,9 +99,9 @@ Add an item to the page.
 
 <tr class='tr1'>
 <td class='td1'> 
-<input type=button name=b_addfield value='Display user-entered input' onclick='showFieldList()' class='b_addbutt'/>
+<input type=button name=b_adddisp value='Display user-entered input' onclick='showFieldList()' class='b_addbutt'/>
 </td>
-<td class='td2'><select id='addf_select' name=addfield class='addf_select'> </select>
+<td class='td2'><select id='add_disp_select' name=add_disp_select class='add_disp_select'> </select>
 </td>
 </tr>
 
