Committing before getting code for displaying demo

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Add an item to the page.
 </td>
 </tr>
 
-<tr class='tr1'>
+<tr class='tr1' id='b_adddisp_tr'>
 <td class='td1'> 
 <input type=button name=b_adddisp value='Display user-entered input' onclick='showFieldList()' class='b_addbutt'/>
 </td>
@@ -191,6 +191,29 @@ Add or modify a text field
 </div>
 </div>
 <div class="clear"></div>
+<div class="clear"></div>
+
+</div>
+<!--
+Three types of pages will be added, 
+a paragraph
+a field
+and a display 
+-->
+<div class="tf_center tf_field" id='actual_page_demo' style='display:block' >
+<div><strong><em>
+This is a preview of the actual page 
+</em></strong> </div>
+<div class="clear"></div>
+<div class="clear"></div>
+<div class="clear"></div>
+<div class="mockup" id="mockup" >
+<div id='mockup_top' class='mockup_top' >
+
+</div>
+<div class='mockup_footer' id= 'mockup_footer'  >
+</div>
+</div>
 <div class="clear"></div>
 
 </div>
