The logic of AddField and display user entered input is working

--- a/index.html
+++ b/index.html
@@ -80,10 +80,11 @@ Add an item to the page.
 <div class="clear"></div>
 <div id='page_title'> </div>
 <div id='id_field_list0' class='section02'>  
+<input type=hidden id='page_id' /> 
 <table class='divTable' id='id_eachpage_table' >
 <tr class='tr1'>
 <td class='td1'> 
-<input type=button name=b_addfield value='Add Field' onclick='showFieldList()' class='b_addbutt'/>
+<input type=button name=b_addfield value='Add Field' onclick='addFieldToPage()' class='b_addbutt'/>
 </td>
 <td class='td2'><select id='addf_select' name=addfield class='addf_select'> </select>
 </td>
