Adding basic fields working in the disp0lay

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ a paragraph
 a field
 and a display 
 -->
-<div class="tf_center tf_field" id='actual_page_demo' style='display:block' >
+<div class="tf_center tf_field" id='actual_page_demo' style='display:none' >
 <div><strong><em>
 This is a preview of the actual page 
 </em></strong> </div>
