--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Add an item to the page.
 
 <tr class='tr1'>
 <td class='td1'> 
-<input type=button name=b_addpara value='Add Paragraph' onclick='showFieldList()' class='b_addbutt'/>
+<input type=button name=b_addpara value='Add Paragraph' onclick='showPara()' class='b_addbutt'/>
 </td>
 <td class='td2'>
 </td>
@@ -133,20 +133,8 @@ These are the current list of fields
 
 </div>
 
-<div class='field2page' id='field2page' style='display:none'>
-
-<div class=tc> 
-Add a field : <input type=button name=b_addfield value='Add Field' onclick='showFieldList()' class='b_addbutt'/>
-</div>
-<div class=tc> 
-Add a paragraph/text  : <input type=button name=b_addpara value='Add Paragraph' onclick='showAddParagraph()' class='b_addbutt' />
-</div>
-<div class=tc> 
-Show user-data : <input type=button name=b_adddata value='User Input' onclick='showAddDisplay()' class='b_addbutt' />
-</div>
 
 
-</div>
 
 <div class="tf_center" id='tf_addpage' style='display:none' >
 Please specify the name of the page
@@ -201,6 +189,17 @@ a paragraph
 a field
 and a display 
 -->
+<div class="tf_center tf_field" id='newpara' style='display:none' >
+<div>
+<textarea rows="4" cols="50" id='para_textarea'  >
+</textarea>
+</div>
+<div class="clear"></div>
+<div class="clear"></div>
+<div class='tf_button'> 
+<input type=button name=b_addpara value='Add Paragraph' onclick='addParaToPage()' class='b_addbutt'/>
+</div>
+</div>
 <div class="tf_center tf_field" id='actual_page_demo' style='display:none' >
 <div><strong><em>
 This is a preview of the actual page 
