Completed the code for God's sake

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div id="minHeight"></div>
 <div class="header" align="center">
 <div class="div_header">
-<div class="logo"><a href="http://127.0.0.1/allactivity"><img src="./images/logo01.gif" alt="Groofer" border="0"></a></div>
+<div class="logo"><a href="javascript:void(0)"><img src="./images/logo01.gif" alt="Crunchit" border="0"></a></div>
 <div class="header_search"> 
 
 </div>
