--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <!-- saved from url=(0023)http://127.0.0.1/search -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>Groofer</title>
+<title>Crunchtime</title>
 <link href="./css/crunchit.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="./js/jquery-1.9.1.js"></script>
 <script type="text/javascript" src="./js/jquery-tooltips.js"></script>
-<script src="./js/crunchit.js" type="text/javascript"></script><style type="text/css">.switchcontent{display:none;}</style>
+<script src="./js/crunchit.js" type="text/javascript"></script>
 
 </head>
 
