--- a/index.html
+++ b/index.html
@@ -133,6 +133,27 @@ These are the current list of fields
 
 
 
+<div class="tf_center" id='tf_addcondition' style='display:block' >
+Create a conditional input out here 
+<hr>
+<div class='float_left04' >
+<select id='condition_select' class='addf_select' >
+</select>
+</div>
+</div>
+<div class="clear"></div>
+<div class="clear"></div>
+<div>
+<div class='float_left03'> &nbsp; </div>
+<div class='float_left03'>
+<input type="submit" value="Submit" class="button_css01" onclick="return addConditionSubmit();"/>
+</div>
+</div>
+</div>
+<div class="clear"></div>
+<div class="clear"></div>
+
+</div>
 
 <div class="tf_center" id='tf_addpage' style='display:none' >
 Please specify the name of the page
