Step 1, added the java function(s) to manage conditions

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <div class="left_blocks">
 <div class="left_blocks_links" id='lf_ctr' ><a href="javascript:void(0)" onclick=listfields() rel="tooltip" title="List Fields">
-<strong>List Fields</strong>&nbsp;<img src="./images/arrow02.gif" class="arrow_link_open"></a>
+List Fields&nbsp;</a>
 </div>
 </div>
 
@@ -51,10 +51,15 @@ onclick='addfield()' >Add Field</a>
 </div>
 
 
+<div class="left_blocks">
+<div class="left_blocks_links" id='lf_addcondition' ><a href="javascript:void(0)" onclick=addCondition() rel="tooltip" title="Add Condition">
+Add Condition&nbsp;</a>
+</div>
+</div>
 
 <div class="left_blocks">
 <div class="left_blocks_links" id='lf_addpage' ><a href="javascript:void(0)" onclick=addPage() rel="tooltip" title="Add Page">
-<strong>Add Page</strong>&nbsp;<img src="./images/arrow02.gif" class="arrow_link_open"></a>
+Add Page &nbsp;</a>
 </div>
 </div>
 
